# hear-yourself

./: .gitignore  CHANGELOG.md  Hear Yourself.spec  README.md  app.py  build.py  build.spec  cliff.toml  config.py  create_icon.py  pyproject.toml  requirements-lock.txt  requirements.txt  setup.py
.github/workflows/: release.yml
