[project]
name = "hear-yourself"
version = "1.0.0"
description = "Hear your microphone through your speakers with minimal latency"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "rumps>=0.4.0",
    "sounddevice>=0.4.6",
]

[dependency-groups]
dev = [
    "pillow>=10.0",
    "pyinstaller>=6.0",
]
