[project]
name = "hear-yourself"
version = "1.0.0"
description = "Hear your microphone through your speakers with minimal latency"
requires-python = ">=3.12"
dependencies = [
    "rumps>=0.4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "pynput>=1.7",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pyobjc-framework-ServiceManagement>=10.0",
]
